<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="mealDetail"
            type="com.example.fikrikhairulshaleh_mealdb.model.ResponseMealDetail" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".DetailMealsActivity">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/meal_detail_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5">

                <androidx.cardview.widget.CardView
                    android:id="@+id/latest_meal_item_wrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:elevation="10dp"
                    android:orientation="horizontal"
                    card_view:cardCornerRadius="15dp"
                    card_view:cardElevation="10dp"
                    card_view:cardMaxElevation="1dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/img_detail_meal"
                        loadImageFromUrl="@{mealDetail.meals.get(0).strMealThumb}"
                        android:layout_width="match_parent"
                        android:layout_height="250dp"
                        android:contentDescription="@string/meal_detail_image"
                        android:scaleType="fitXY"
                        tools:src="@drawable/img_placeholder" />

                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/meal_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/quicksand_bold"
                    android:text="@{mealDetail.meals.get(0).strMeal}"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/latest_meal_item_wrapper"
                    tools:text="@string/meal_name" />

                <TextView
                    android:id="@+id/meal_tags"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="16dp"
                    android:layout_toEndOf="@id/meal_name"
                    android:fontFamily="@font/quicksand_medium"
                    android:text="@{mealDetail.meals.get(0).strTags}"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="@+id/meal_name"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/meal_area"
                    tools:text="@string/example_tags" />

                <TextView
                    android:id="@+id/meal_area"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:fontFamily="@font/quicksand_medium"
                    android:text="@{mealDetail.meals.get(0).strArea}"
                    android:textSize="16sp"
                    android:textStyle="italic"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/meal_name"
                    tools:text="@string/example_area" />

                <TextView
                    android:id="@+id/meal_category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8sp"
                    android:fontFamily="@font/quicksand_medium"
                    android:maxLines="2"
                    android:text="@{mealDetail.meals.get(0).strCategory}"
                    android:textSize="16sp"
                    android:textStyle="italic|bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/meal_area"
                    tools:text="@string/example_category" />

                <TextView
                    android:id="@+id/about_meal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/quicksand_bold"
                    android:text="@string/about_meal"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/meal_category" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/instruction_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:elevation="10dp"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    app:layout_constraintStart_toStartOf="parent"
                    card_view:cardCornerRadius="15dp"
                    card_view:cardElevation="10dp"
                    card_view:cardMaxElevation="1dp"
                    app:layout_constraintTop_toBottomOf="@+id/about_meal">

                    <TextView
                        android:id="@+id/meal_instruction"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="16dp"
                        android:fontFamily="@font/quicksand"
                        android:justificationMode="inter_word"
                        android:text="@{mealDetail.meals.get(0).strInstructions}"
                        android:textSize="14sp"
                        android:paddingBottom="10dp"
                        android:paddingTop="10dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/about_meal"
                        tools:text="@string/lorem_ipsum" />
                </androidx.cardview.widget.CardView>

                <Button
                    android:id="@+id/add_favorite_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:backgroundTint="@color/light_blue"
                    android:fontFamily="@font/quicksand_bold"
                    android:text="@string/add_to_favorite"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/instruction_card" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />

        <ImageView
            android:id="@+id/error_icon"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:contentDescription="@string/warning"
            android:src="@drawable/ic_warning"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.53"
            app:tint="@color/light_red" />

        <TextView
            android:id="@+id/error_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/failed_to_fetch_data"
            android:textAlignment="center"
            android:textColor="@color/light_red"
            android:textSize="16sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/error_icon"
            app:layout_constraintVertical_bias="0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
